test/assets/error/multiple_errors.hera
ADD(R1, 10)
INC(R4)
